# FYP_Improved_LeGO-LOAM

./: README.md
LeGO-LOAM-Patchwork/: kitti_to_tum.ipynb
LeGO-LOAM-Patchwork/LeGO-LOAM-main/LeGO-LOAM/: CMakeLists.txt  package.xml
LeGO-LOAM-Patchwork/LeGO-LOAM-main/LeGO-LOAM/include/: utility.h
LeGO-LOAM-Patchwork/LeGO-LOAM-main/LeGO-LOAM/include/patchwork/: ground_estimate.h  patchwork.hpp
LeGO-LOAM-Patchwork/LeGO-LOAM-main/LeGO-LOAM/launch/: run.launch
LeGO-LOAM-Patchwork/LeGO-LOAM-main/LeGO-LOAM/src/: featureAssociation.cpp  imageProjection.cpp  mapOptmization.cpp  pub_for_legoloam.cpp  transformFusion.cpp
LeGO-LOAM-Patchwork/LeGO-LOAM-main/config/: params.yaml
